# preloaded_state

./: Cargo.toml  README.md  api.http  dji.html  dji_dump.html  main.dart.txt  package-lock.json  package.json  wrangler.toml
backend/: Cargo.toml  wrangler.toml
backend/src/: analysis.rs  db.rs  fetcher.rs  lib.rs
frontend/: wrangler.toml
frontend/public/: app.js  index.html  style.css
public/: app.js  index.html  style.css
src/: db.rs  lib.rs  libnode.rs  models.rs
src/libnode/: analysis.rs  db.rs  fetcher.rs  models.rs
