[package]
name = "preloaded_state"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = { version = "0.0.17", features = ["d1"] } # D1機能のために`d1`フィーチャーを追加
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1.7"
urlencoding = "2.1.3"
async-trait = "0.1.77"
futures = "0.3.30"
chrono = { version = "0.4.31", features = ["serde"] } # 日付/時刻処理用
csv = "1.1"
js-sys = "0.3.61"

[dev-dependencies]
worker-testing = "0.0.17"

[features]
default = ["console_error_panic_hook"]
