[package]
name = "preloaded_state"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
lazy_static = "1.4.0"
regex = "1.10.3"
scraper = "0.14.0"
worker = { version = "0.7.4", features = ["d1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
urlencoding = "2.1.3"
async-trait = "0.1.77"
futures = "0.3.30"
chrono = { version = "0.4.31", features = ["serde", "wasm-bindgen"] }
csv = "1.1"
js-sys = "0.3.61"

[features]
default = ["console_error_panic_hook"]
